# SiigoDocumentManager

./: .gitignore  .replit  README.md  example3.xlsx  invalid_template.xlsx  main.py  pyproject.toml  requirements.txt  scheduled_tasks.db  test_data.py  valid_template.xlsx
assets/: TEMPLATE_GUIDE.md  TEMPLATE_README.md  sample_template.xlsx
docs/: API.md
templates/: example_test.xlsx  instructions.md
tests/: test_api_client.py  test_database.py  test_excel_processor.py  test_scheduler.py  test_template_validator.py
utils/: api_client.py  database.py  excel_processor.py  logger.py  scheduler.py  template_generator.py  template_validator.py
