[project]
name = "repl-nix-siigodocumentmanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "streamlit>=1.39.0",
    "numpy",
]
